set view all projects to point to correct url

--- a/src/pages/index/Project.astro
+++ b/src/pages/index/Project.astro
@@ -48,7 +48,7 @@ const projectDetailsList: IProject[] = [
   </ul>
 
   <!-- View All Projects -->
-  <AppLink class="mt-24 block text-gray-800 font-semibold capitalize" showSuffixIcon title="Project Archives">
+  <AppLink class="mt-24 block text-gray-800 font-semibold capitalize" showSuffixIcon url="/project">
     view all projects
   </AppLink>
 </section>
