--- a/src/pages/index/Work.astro
+++ b/src/pages/index/Work.astro
@@ -70,7 +70,5 @@ const workDetailsList: IWork[] = [
   </ul>
 
   <!-- View Full Resume -->
-  <AppLink class="mt-24 block text-gray-800 font-semibold capitalize" showSuffixIcon title="Resume">
-    view full resume
-  </AppLink>
+  <AppLink class="mt-24 block text-gray-800 font-semibold capitalize" showSuffixIcon>view full resume</AppLink>
 </section>
