remove AppLink title

--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -12,12 +12,7 @@ import AppLink from "./AppLink.astro"
         by
       </span>
       <span class="inline-flex">
-        <AppLink
-          class="text-gray-800 capitalize"
-          url="https://yurikong.github.io"
-          showSuffixIcon
-          title="Jianqiang Du's Portfolio"
-        >
+        <AppLink class="text-gray-800 capitalize" url="https://yurikong.github.io" showSuffixIcon>
           jianqiang du
         </AppLink>
         .
@@ -28,7 +23,7 @@ import AppLink from "./AppLink.astro"
     <div>
       <span>Released under</span>
       <span class="inline-flex">
-        <AppLink class="text-gray-800" url="https://opensource.org/license/mit" showSuffixIcon title="The MIT License">
+        <AppLink class="text-gray-800" url="https://opensource.org/license/mit" showSuffixIcon>
           The MIT License
         </AppLink>
         .
@@ -39,12 +34,7 @@ import AppLink from "./AppLink.astro"
     <div>
       <span>Credits —</span>
       <span class="inline-flex">
-        <AppLink
-          class="text-gray-800 capitalize"
-          url="https://brittanychiang.com"
-          showSuffixIcon
-          title="Brittany Chiang's Portfolio"
-        >
+        <AppLink class="text-gray-800 capitalize" url="https://brittanychiang.com" showSuffixIcon>
           brittany chiang
         </AppLink>
         .
