remove AppLink title

--- a/src/pages/index/EducationDetails.astro
+++ b/src/pages/index/EducationDetails.astro
@@ -12,7 +12,7 @@ const { university, universityHomepage, degree, major, GPA, startYear, endYear }
 </div>
 
 <!-- University Name -->
-<AppLink class="text-gray-800 font-medium" url={universityHomepage} showSuffixIcon title={university}>
+<AppLink class="text-gray-800 font-medium" url={universityHomepage} showSuffixIcon>
   {university}
 </AppLink>
 
