remove text-based AppLink title

--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -24,12 +24,7 @@ const socials: ISocial[] = [
   <p class="mt-16 text-base">
     <span>I am the creator of</span>
     <span class="inline-flex">
-      <AppLink
-        class="text-gray-800"
-        url="https://github.com/yurikong/astro-theme-resume-minimalist"
-        showSuffixIcon
-        title="Project Repository"
-      >
+      <AppLink class="text-gray-800" url="https://github.com/yurikong/astro-theme-resume-minimalist" showSuffixIcon>
         Astro Theme Resume Minimalist
       </AppLink>
       .
