remove text-based AppLink title

--- a/src/pages/index/ProjectDetails.astro
+++ b/src/pages/index/ProjectDetails.astro
@@ -41,7 +41,7 @@ const visibleHighlights: IProjectHighlight[] = highlights.filter((it) => it.hidd
 </div>
 
 <!-- Name -->
-<AppLink class="text-gray-800 font-medium" url={repository?.url} showSuffixIcon={!!repository?.url} title={name}>
+<AppLink class="text-gray-800 font-medium" url={repository?.url} showSuffixIcon={!!repository?.url}>
   {name}
 </AppLink>
 
