remove w-vw on h2

--- a/src/pages/index/Education.astro
+++ b/src/pages/index/Education.astro
@@ -31,7 +31,7 @@ const educationDetailsList: IEducation[] = [
 
 <section class={className}>
   <h2
-    class="sticky top-0 z-20 mb-4 w-vw bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
+    class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
   >
     education
   </h2>
