--- a/src/pages/index/Work.astro
+++ b/src/pages/index/Work.astro
@@ -55,7 +55,7 @@ const workDetailsList: IWork[] = [
 
 <section class={className}>
   <h2
-    class="sticky top-0 z-20 mb-4 w-vw bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
+    class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
   >
     work
   </h2>
