change suffix icon

--- a/src/pages/index/Project.astro
+++ b/src/pages/index/Project.astro
@@ -48,7 +48,12 @@ const projectDetailsList: IProject[] = [
   </ul>
 
   <!-- View All Projects -->
-  <AppLink class="mt-24 block text-gray-800 font-semibold capitalize" showSuffixIcon url="/project">
+  <AppLink
+    class="mt-24 block text-gray-800 font-semibold capitalize"
+    url="/project"
+    showSuffixIcon
+    suffixIconClassName="i-ri:arrow-right-line"
+  >
     view all projects
   </AppLink>
 </section>
