change techs order

--- a/src/pages/index/Work.astro
+++ b/src/pages/index/Work.astro
@@ -21,10 +21,10 @@ const workDetailsList: IWork[] = [
       { name: "SDP Print - Image Rotation", url: "#" },
     ],
     technologiesUsed: [
-      "Typescript",
       "Vue 3",
       "Pinia",
       "Vue Router",
+      "Typescript",
       "Element Plus",
       "Material UI",
       "UnoCSS",
@@ -46,7 +46,7 @@ const workDetailsList: IWork[] = [
       { name: "Digifly", url: "#" },
       { name: "BMP", url: "#" },
     ],
-    technologiesUsed: ["Javascript", "Vue 2", "Vuex", "Vue Router", "Element UI", "SCSS", "Webpack"],
+    technologiesUsed: ["Vue 2", "Vuex", "Vue Router", "Javascript", "Element UI", "SCSS", "Webpack"],
     startYear: 2021,
     endYear: 2023,
   },
