update UnoCSS casing

--- a/src/pages/index/Project.astro
+++ b/src/pages/index/Project.astro
@@ -14,7 +14,7 @@ const projectDetailsList: IProject[] = [
   {
     name: "Astro Theme Resume Minimalist",
     description: "An open-sourced minimal resume site template built with Astro.",
-    technologiesUsed: ["Astro", "Typescript", "Unocss", "HTML & CSS", "Github Pages"],
+    technologiesUsed: ["Astro", "Typescript", "UnoCSS", "HTML & CSS", "Github Pages"],
     startYear: 2024,
     endYear: 2024,
     repository: new Repository("yurikong", "astro-theme-resume-minimalist"),
