fix ts intellisense issues

--- a/src/pages/index/Education.astro
+++ b/src/pages/index/Education.astro
@@ -8,25 +8,27 @@ interface Props {
 }
 const { class: className } = Astro.props
 
-const educationDetailsList: IEducation[] = [
-  {
-    university: "California State University, Long Beach",
-    universityHomepage: "https://www.csulb.edu/",
-    degree: "B.S.",
-    major: "Computer Science",
-    GPA: "3.65",
-    startYear: 2018,
-    endYear: 2020,
-  },
-  {
-    university: "Mt. San Antonio College",
-    universityHomepage: "https://www.mtsac.edu/",
-    major: "Computer Science",
-    GPA: "3.48",
-    startYear: 2015,
-    endYear: 2018,
-  },
-].toSorted(mostRecentYearComparator)
+const educationDetailsList: IEducation[] = (
+  [
+    {
+      university: "California State University, Long Beach",
+      universityHomepage: "https://www.csulb.edu/",
+      degree: "B.S.",
+      major: "Computer Science",
+      GPA: "3.65",
+      startYear: 2018,
+      endYear: 2020,
+    },
+    {
+      university: "Mt. San Antonio College",
+      universityHomepage: "https://www.mtsac.edu/",
+      major: "Computer Science",
+      GPA: "3.48",
+      startYear: 2015,
+      endYear: 2018,
+    },
+  ] satisfies IEducation[]
+).toSorted(mostRecentYearComparator)
 ---
 
 <section class={className}>
