--- a/src/pages/index/Work.astro
+++ b/src/pages/index/Work.astro
@@ -46,7 +46,7 @@ const workDetailsList: IWork[] = (
         "Developed and maintained various interactive web apps for a bank client. Worked closely with cross-functional teams, including developers, designers, and product managers, to ensure compliance and code quality.",
       products: [
         { name: "Digifly", url: "#" },
-        { name: "BMP", url: "#" },
+        { name: "Big Data Marketing Platform", url: "#" },
       ],
       technologiesUsed: ["Vue 2", "Vuex", "Vue Router", "Javascript", "Element UI", "SCSS", "Webpack"],
       startYear: 2021,
