--- a/src/pages/index/WorkDetails.astro
+++ b/src/pages/index/WorkDetails.astro
@@ -1,5 +1,6 @@
 ---
 import type { IWork } from "~types/work"
+import YearRange from "~components/YearRange.astro"
 import AppLink from "~components/AppLink.astro"
 
 interface Props extends IWork {}
@@ -7,9 +8,7 @@ const { jobTitle, company, companyHomepage, description, products, technologiesU
 ---
 
 <!-- Employed Years -->
-<div class="py-2 text-(xs gray-400) tracking-wide uppercase">
-  {startYear}{startYear !== endYear && <span> — {endYear ?? "Present"}</span>}
-</div>
+<YearRange class="py-2 text-(xs gray-400) tracking-wide uppercase" startYear={startYear} endYear={endYear} />
 
 <!-- Job Title & Company -->
 <AppLink class="text-gray-800 font-medium" url={companyHomepage} showSuffixIcon>
