add engine info

--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -40,5 +40,14 @@ import AppLink from "./AppLink.astro"
         .
       </span>
     </div>
+
+    <!-- Engine -->
+    <div>
+      <span>Site built with</span>
+      <span class="inline-fle">
+        <AppLink class="text-gray-800 capitalize" url="https://astro.build" showSuffixIcon>Astro</AppLink>
+        .
+      </span>
+    </div>
   </p>
 </footer>
