all projects table header sticky

--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -84,7 +84,7 @@ const projectArchiveList: IProjectArchive[] = (
 
   <table class="mt-12 text-left">
     <thead>
-      <tr class="border-(b gray-800/10)">
+      <tr class="sticky top-0 z-20 bg-gray-100 capitalize">
         <th>Year</th>
         <th>Project</th>
         <!-- <th>Made at</th> -->
