set AppLink to block

--- a/src/pages/index/EducationDetails.astro
+++ b/src/pages/index/EducationDetails.astro
@@ -11,7 +11,7 @@ const { university, universityHomepage, degree, major, GPA, startYear, endYear }
 <YearRange class="py-2 text-(xs gray-400) tracking-wide uppercase" startYear={startYear} endYear={endYear} />
 
 <!-- University Name -->
-<AppLink class="text-gray-800 font-medium" url={universityHomepage} showSuffixIcon>
+<AppLink class="block text-gray-800 font-medium" url={universityHomepage} showSuffixIcon>
   {university}
 </AppLink>
 
