--- a/src/pages/index/ProjectDetails.astro
+++ b/src/pages/index/ProjectDetails.astro
@@ -41,7 +41,7 @@ const visibleHighlights: IProjectHighlight[] = highlights.filter((it) => it.hidd
 <YearRange class="py-2 text-(xs gray-400) tracking-wide uppercase" startYear={startYear} endYear={endYear} />
 
 <!-- Name -->
-<AppLink class="text-gray-800 font-medium" url={repository?.url} showSuffixIcon={!!repository?.url}>
+<AppLink class="block text-gray-800 font-medium" url={repository?.url} showSuffixIcon={!!repository?.url}>
   {name}
 </AppLink>
 
