--- a/src/pages/index/WorkDetails.astro
+++ b/src/pages/index/WorkDetails.astro
@@ -12,7 +12,7 @@ const { jobTitle, company, companyHomepage, description, products, technologiesU
 <YearRange class="py-2 text-(xs gray-400) tracking-wide uppercase" startYear={startYear} endYear={endYear} />
 
 <!-- Job Title & Company -->
-<AppLink class="text-gray-800 font-medium" url={companyHomepage} showSuffixIcon>
+<AppLink class="block text-gray-800 font-medium" url={companyHomepage} showSuffixIcon>
   {jobTitle} · {company}
 </AppLink>
 
