update work description

--- a/src/pages/index/Work.astro
+++ b/src/pages/index/Work.astro
@@ -16,7 +16,7 @@ const workDetailsList: IWork[] = (
       company: "Sacmi Machinery (Foshan Nanhai) Co., Ltd.",
       companyHomepage: "https://www.sacmi.cn/sacmi-china",
       description:
-        "Developed and styled various desktop apps for single-pass inkjet printer in ceramic tiles production. Deployed and maintained self-hosted private git and npm repositories. Provide leadership within R&D department through close collaboration and knowledge shares.",
+        "Developed and styled various desktop apps for single-pass inkjet printer in ceramic tiles production. Deployed and maintained self-hosted private git and npm repositories. Obtained software copyright for the company. Provide leadership within R&D department through close collaboration and knowledge shares.",
       products: [
         { name: "SDP Print", url: "#" },
         { name: "SDP Print - Image Rotation", url: "#" },
