--- a/src/pages/index/Project.astro
+++ b/src/pages/index/Project.astro
@@ -1,6 +1,6 @@
 ---
 import type { IProject } from "~types/project"
-import { Repository } from "~/types/repository"
+import { getAllProjects } from "~/api/project"
 import { mostRecentYearComparator } from "~utils/comparators"
 import ProjectDetails from "./ProjectDetails.astro"
 import AppLink from "~components/AppLink.astro"
@@ -10,20 +10,11 @@ interface Props {
 }
 const { class: className } = Astro.props
 
-const site: string = import.meta.env.DEV ? `http://localhost:${import.meta.env.PORT}` : import.meta.env.SITE
-const apiUrl: string = `${site}${import.meta.env.BASE_URL}/projects.json`
 const projectDetailsList: IProject[] = []
 
 try {
-  const response = await fetch(apiUrl)
-  const data: IProject[] = await response.json()
-  data.forEach((it) => {
-    if (it.repository) {
-      const { owner, name } = it.repository
-      it.repository = new Repository(owner, name)
-    }
-  })
-  const selectedProjects: IProject[] = data.toSorted(mostRecentYearComparator).slice(0, 5)
+  const projects: IProject[] = await getAllProjects()
+  const selectedProjects: IProject[] = projects.toSorted(mostRecentYearComparator).slice(0, 5)
   projectDetailsList.push(...selectedProjects)
 } catch (error) {
   console.error(error)
